# pyfinancebot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  example.env  mcc_categories.json  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 2023-05-02_initial.py  2023-05-08_add_category_field_to_operations_table.py  2023-05-17_add_company_table.py  2023-06-01_add_company_id_to_operations_table.py  2023-06-01_alter_company_id_in_operations_not_.py  2023-09-19_add_failed_operation.py  2024-09-17_add_monobank_key_to_companies_users.py  2024-09-20_add_monobank_accounts.py  2024-09-20_add_monobank_integrations.py  2024-09-20_add_unique_contraint_to_monobank_.py  2024-09-20_remove_mono_integration_key_from_us_cp.py  2024-09-21_add_monobank_account_id_to_operations.py
models/category-classifier/: meta.json
models/category-classifier/textcat/: cfg
models/category-classifier/vocab/: strings.json
models/operation-ner/: config.cfg  meta.json
source/: main.py
source/controllers/: message_controller.py  none_controller.py  receipt_controller.py
source/models/: main_model.py  message_model.py
source/repositories/: exceptions.py
source/views/: receipt_view.py
src/: config.py  database.py  every_day.py  main.py  manage.py
src-old/: main.py
src-old/controllers/: base_controller.py  main_controller.py  receipt_controller.py
src-old/models/: receipt_model.py
src-old/repositories/: callback_types.py
src-old/views/: base_view.py  main_view.py
src/alembic/: env.py
src/commands/: __init__.py  base.py  currencies.py  operations.py  reports.py  schedule.py
src/core/: config.py  database.py
src/crontab/: every_day.py
src/crud/: __init__.py  base.py  currencies.py  operations.py  users.py  wallets.py
src/enums/: __init__.py  commands.py  operations.py
src/exceptions/: __init__.py  base.py
src/models/: __init__.py  base.py  currencies.py  operations.py  users.py  wallets.py
src/schemas/: __init__.py  common.py  currencies.py  operations.py  users.py
src/sdk/: decorators.py  models.py  repositories.py  schemas.py  utils.py
src/views/: __init__.py  analytics.py  authorization.py  helps.py  operations.py  wallets.py
src/webserver/: __main__.py  app.py  sentry.py
(+55 files in other folders)
